Update package.json file.

--- a/lang/wpfm-faq-collector-addon.pot
+++ b/lang/wpfm-faq-collector-addon.pot
@@ -1,27 +1,38 @@
-# Copyright (C) 2015 Automattic
-# This file is distributed under the GNU General Public License v2 or later.
-#, fuzzy
+# Copyright (C) 2024 Mahbub Alam Khan
+# This file is distributed under the same license as the FAQ Collector - WooCommerce Product Faq Manager Addon plugin.
 msgid ""
 msgstr ""
-"Project-Id-Version: FAQ Collector - WooCommerce Product Faq Manager Addon\n"
-"Report-Msgid-Bugs-To: http://wordpress.org/tags/_s\n"
-"POT-Creation-Date: 2024-07-22 16:36+0300\n"
-"PO-Revision-Date: 2018-01-31 21:24+0600\n"
+"Project-Id-Version: FAQ Collector - WooCommerce Product Faq Manager Addon 1.1.9\n"
+"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/wpfm-faq-collector-addon\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: BlueWindLab <hkhan.cse@gmail.com>\n"
-"Language: en\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 3.4.1\n"
-"X-Poedit-KeywordsList: _;__;_n;_x;_e;esc_attr__;esc_attr_e;esc_html__;"
-"esc_html_e\n"
-"X-Poedit-Basepath: ..\n"
-"X-Poedit-SearchPath-0: lang\n"
-"X-Poedit-SearchPath-1: .\n"
-"X-Poedit-SearchPathExcluded-0: node_modules\n"
-"X-Poedit-SearchPathExcluded-1: .\n"
+"POT-Creation-Date: 2024-12-08T20:48:20+00:00\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"X-Generator: WP-CLI 2.9.0\n"
+"X-Domain: bwl-wpfmfc\n"
+
+#. Plugin Name of the plugin
+msgid "FAQ Collector - WooCommerce Product Faq Manager Addon"
+msgstr ""
+
+#. Plugin URI of the plugin
+msgid "https://bluewindlab.net/portfolio/faq-tab-for-woocommerce-advanced-faq-addon/"
+msgstr ""
+
+#. Description of the plugin
+msgid "Finding an excellent way to collect questions from the user end for your WooCommerce-powered site? FAQ collector addon provides a way to get user questions directly from the product page and make a great list of FAQs for your current and upcoming users."
+msgstr ""
+
+#. Author of the plugin
+msgid "Mahbub Alam Khan"
+msgstr ""
+
+#. Author URI of the plugin
+msgid "https://codecanyon.net/user/xenioushk"
+msgstr ""
 
 #: includes/bwpfm-fca-custom-meta-box.php:21
 msgid "BWL Woo Product FAQ Settings"
@@ -42,9 +53,7 @@ msgid "No"
 msgstr ""
 
 #: includes/bwpfm-fca-custom-meta-box.php:37
-msgid ""
-"This data will not store in to database. Select Yes to send a notification "
-"message to user about the question."
+msgid "This data will not store in to database. Select Yes to send a notification message to user about the question."
 msgstr ""
 
 #: includes/bwpfm-fca-custom-meta-box.php:40
@@ -136,9 +145,7 @@ msgid " Incorrect Captcha Value!"
 msgstr ""
 
 #: includes/shortcode/wpfm-fca-ask-question-form.php:27
-#, php-format
-msgid ""
-" Write your question. Min length %d characters & Max length %d characters !"
+msgid " Write your question. Min length %d characters & Max length %d characters !"
 msgstr ""
 
 #: includes/shortcode/wpfm-fca-ask-question-form.php:28
